ビルド成果物はカバレージの対象に含めない

--- a/package.json
+++ b/package.json
@@ -71,6 +71,11 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/dist/",
+      "/.eslintrc.js"
+    ],
     "testEnvironment": "node"
   }
 }
